<resources>
    <string name="app_name">DrawingApp</string>
    <string name="app_title">Drawing App</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to logIn -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_verification">Verification Code</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_get_code">Get code</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_verify">Verify</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_drawing_question">Save image?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Sign Out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="tool_menu_option">Tool</string>
    <string name="save_menu_option">Save</string>
    <string name="button_cancel">cancel</string>
    <string name="button_set">set</string>

    <string name="progress_dialog_message">Wait...</string>

    <string name="fields_empty_error_message">Username, email and password must not be empty!</string>
    <string name="username_missing_error_message">Username must be provided.</string>
    <string name="email_missing_error_message">Email must be provided.</string>
    <string name="code_missing_error_message">Verification code must be provided.</string>
    <string name="password_missing_error_message">Password must be provided.</string>
    <string name="confirm_password_missing_error_message">Confirm password must be provided.</string>
    <string name="passwords_do_not_match_error">Passwords do not match</string>
    <string name="login_title">Login</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_new_password_title">Enter New Password</string>
    <string name="register_title">Register</string>
    <string name="enter_code_title">Enter Code</string>

</resources>
